syntax = "proto3";
 
package cart;
 
service CartService {

  //Unary Rpc
  rpc Purchase(PurchaseRequest) returns (PurchaseResponse);

  //Server Rpc
  rpc ViewCart(Empty) returns (stream ViewCartResponse);

  //Client rpc
  rpc ShoppingCart(stream ShoppingCartRequest) returns (ShoppingCartResponse);
  
}

message ViewCartResponse {
  string brand = 1;
  uint32 size = 2;
  string color = 3;
  uint32 quantity = 4;
}

message PurchaseRequest {
  string cartId = 1;
}

message PurchaseResponse {
  string message = 1;
}
 
message Empty{}
 
message ShoppingCartRequest {
  string brand = 1;
  string color = 2;
  string size = 3;
  uint32 quantity = 4;
}
 
message ShoppingCartResponse {
  string message = 1;
}